[package]
name = "mdx"
version = "0.5.2"
edition = "2024"
publish = false
description = "MDict .mdx/.mdd file reader and writer for Rust"
license = "GNU Affero General Public License v3.0"
repository = "https://github.com/Safari77/mdx"
keywords = [
    "mdict",
    "mdx",
    "mdd",
    "dictionary",
    "reader",
    "writer",
    "parser",
    "serialization",
]
categories = [
    "encoding",
    "parser-implementations",
]
readme = "README.md"
authors = ["Sami Farin"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["icu"]
rust-icu = ["dep:rust_icu_ucol", "dep:rust_icu_common", "dep:rust_icu_ustring"]
icu = ["dep:icu", "dep:icu_collator", "dep:icu_locale", "dep:icu_provider"]

[dependencies]
snafu = { version = "0.9", features = ["backtrace"] }
log = "0.4"
env_logger = "0.11"
lz4 = "1.28"
lzma-rs = "^0.3"
bzip2 = "0.6"
rust-lzo = "^0.6.2"
serde = { version = "1.0", features = ["derive"] }
adler2 = "2"
serde-xml-rs = "0.8"
serde_json = "1.0"
xxhash-rust = { version = "^0.8.15", features = ["xxh64"] }
byteorder = "1.5"
lru = "0.18"
once_cell = "^1.21"
lazy_static = "^1.5.0"
flate2 = "1.1"
hex = "^0.4.3"
url = "2.5"
percent-encoding = "^2.3.2"
indexmap = "2.13"
encoding_rs = "^0.8.35"
bytemuck = "1.25"
quick-xml = "0.40"
regex = "1.12"
ripemd128 = "^0.1.2"
uuid = { version = "1.22", features = ["v4"] }
chrono = "0.4"
lol_html = "3"
tantivy = "0.26"
zip = { version = "8", default-features = false, features = ["deflate", "deflate64"] }
walkdir = "2.5"
shellexpand = "^3.1.0"
mime_guess = "^2.0.0"
htmlescape = "0.3.1"

# ICU dependencies - made optional through features
icu = { version = "^2.0.0", optional = true }
icu_collator = { version = "^2.0.0", optional = true }
icu_locale = { version = "^2.0.0", optional = true }
icu_provider = { version = "^2.0.0", optional = true }

[target.'cfg(not(target_os = "windows"))'.dependencies]
rust_icu_sys = { version="5.0.0", optional = true }
rust_icu_ucol = { version = "^5.0.0", optional = true }
rust_icu_common = { version = "^5.0.0", optional = true }
rust_icu_ustring = { version = "^5.0.0", optional = true }

[target.x86_64-pc-windows-gnu.dependencies]
rust_icu_sys = { version="5.0.0", default-features = false, features=["renaming", "icu_version_in_env"], optional = true }
rust_icu_ucol = { version = "^5.0.0", default-features = false, features = [
    "renaming",
    "icu_version_in_env",
], optional = true }
rust_icu_common = { version = "^5.0.0", default-features = false, features = [
    "renaming",
    "icu_version_in_env",
], optional = true }
rust_icu_ustring = { version = "^5.0.0", default-features = false, features = [
    "renaming",
    "icu_version_in_env",
], optional = true }

[lints.clippy]
# Enable the pedantic group for suspect code
#pedantic = "warn"

# Explicitly warn on panic-inducing patterns
unwrap_used = "deny"
expect_used = "deny"
#panic = "warn"
#indexing_slicing = "warn"
todo = "warn"
unimplemented = "warn"
#unreachable = "warn"
fallible_impl_from = "warn"
